# filestore

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  init_dev  sqlx-data.json
.githooks/: pre-commit
.github/workflows/: build-image.yml
migrations/: 20220916154125_create_initial_tables.up.sql
src/: error.rs  handler.rs  main.rs  model.rs  util.rs
